--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "materialAngular",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
     "angular-animate": "~1.5.3",
     "angular-cookies": "~1.5.3",
@@ -15,7 +15,11 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "angular-formly": "~8.4.1",
+    "angular-formly-material": "~0.14.3",
+    "angular-material-data-table": "^0.10.10",
+    "angular-echarts": "^0.3.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
